Fortran/IBM/execute/F2008/intrinsics/error/unit_tests/erfc01a.scenario
#BEGINSCENARIO
#BEGINDOC
#NAME=F2008/intrinsics/error/unit_tests/erfc01a.scenario
#FEATURE = ERF and ERFC are now part of F2008
#DATE    = 20110302
#TEST_TYPE=unit
#ENDDOC

#BEGINENV
#INVALID_XOPTS  = $(F_COMPILE^OPT_OPTIMIZE_FOR_SMP) $(F_COMPILE^OPT_OPTIMIZE_FOR_SMP_NOOPT)
#BEGINDEFS
#ENDDEFS
#ENDENV

#BEGINCONTROL

#CMD       = XLF2003_COMPILE
#INPUT     = $(tcasedir)erfc01.f
#OPTS      = $(OPT_SET_LANG_LEVEL<2003std>)
#OUTPUT    = erfc01a$(OBJ)
#STDERR    = erfc01a.err
#ENDCMD

#CMD       = XLDIFF
#INPUT     = $($(tcasedir)erfc01a$(product)vf) erfc01a.err
#ENDCMD

#CMD       = F_LINK
#INPUT     = erfc01a$(OBJ)
#OUTPUT    = erfc01a$(EXE)
#ENDCMD

#CMD       = RUN
#INPUT     = erfc01a$(EXE)
#ENDCMD

#ENDCONTROL
#ENDSCENARIO
